# parallel-multi-agent-codegen

./: .env.example  .gitignore  CLAUDE.md  CLAUDE1.md  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  coder.py  integrator.py  llm_utils.py  orchestrator.py  planner.py  pricing.py  reviewer.py  tester.py
graph/: __init__.py  pipeline.py
models/: __init__.py  errors.py  state.py
prompts/: __init__.py
sandbox/: Dockerfile
tests/: conftest.py  test_agents.py  test_llm_utils.py  test_models.py  test_pipeline.py  test_pricing.py
